Update HTML and CSS files

--- a/3.3 final project/style.css
+++ b/3.3 final project/style.css
@@ -81,6 +81,7 @@ h1 {
     transition: all 300ms ease;
     cursor: pointer;
     margin-top: 24px;
+    cursor: not-allowed;
 }
 
 /* 
@@ -135,6 +136,7 @@ nav {
     position: relative;
     transition: all 300ms;
     text-decoration: none;
+    cursor: not-allowed;
 }
 
 .nav__link:hover {
@@ -144,6 +146,7 @@ nav {
 
 .login {
     margin-left: 48px;
+    cursor: not-allowed;
 }
 
 .nav__link--primary {
@@ -162,6 +165,7 @@ nav {
 .nav__link--primary:hover {
     text-decoration: none;
     transform: scale(1.025);
+    cursor: not-allowed;
 }
 
 .btn__menu {
@@ -290,6 +294,7 @@ header .row {
     font-weight: 700;
     font-size: 16px;
     transition: all 300ms ease;
+    cursor: not-allowed;
 }
 
 .header__customers--title {
@@ -677,6 +682,7 @@ PRICING ↓
     font-size: 0.875rem;
     text-transform: uppercase;
     letter-spacing: 0.05em;
+    cursor: not-allowed;
 }
 
 .plan:nth-child(1) .plan__stripe, .plan:nth-child(1) .plan__button {
@@ -746,6 +752,7 @@ TESTIMONIALS ↓
     border-radius: 50%;
     margin: 0 12px;
     transition: all 300ms ease;
+    cursor: not-allowed;
 } 
 
 .testimonial__button svg {
@@ -961,6 +968,7 @@ footer {
     font-weight: 500;
     position: relative;
     cursor: pointer;
+    cursor: not-allowed;
 }
 
 .footer__bottom {
