--- a/3.3 final project/style.css
+++ b/3.3 final project/style.css
@@ -334,6 +334,7 @@ FEATURES ↓
     display: flex;
     flex-wrap: wrap;
     margin-top: 40px;
+    
 }
 
 .feature__row {
@@ -342,8 +343,23 @@ FEATURES ↓
     padding: 32px 24px;
 }
 
+.feature__para {
+    margin-top: 16px;
+    font-size: 16px;
+    max-width: calc(634px / 3);
+    color: rgb(124, 139, 161);
+    line-height: 2;
+    font-weight: 500;
+}
+
 #features {
     position: relative;
+}
+
+
+#features .section__para {
+    text-align: center;
+    max-width: 576px;
 }
 
 #features .row__narrow {
@@ -523,6 +539,19 @@ VALUES ↓
     align-items: flex-start;
     display: flex;
     flex-direction: column;
+}
+
+.values__list {
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    max-width: none;
+    flex-direction: row;
+}
+
+.value__title {
+    display: flex;
+    align-items: center;
 }
 
 .value:nth-of-type(1) {
@@ -717,11 +746,20 @@ PRICING ↓
     align-items: center;
 }
 
+#pricing .section__para {
+    max-width: 576px;
+    text-align: center;
+}
+
 /* 
 
 TESTIMONIALS ↓
 
 */
+
+.testimonial {
+    margin-top: 40px;
+}
 
 .testimonial__img {
     width: 80px;
@@ -969,6 +1007,7 @@ footer {
     position: relative;
     cursor: pointer;
     cursor: not-allowed;
+    text-decoration: none;
 }
 
 .footer__bottom {
@@ -1060,7 +1099,16 @@ MOBILE RESPONSIVENESS ↓
     header .row {
         align-items: flex-end;
     }
+    .header__img {
+        max-width: 512px;
+    }
+        h1 {
+        font-size: 30px;
+        color: #1a202c;
+        line-height: 1.25;
+    }
 }
+
 
 @media (max-width: 1024px) {
 
@@ -1074,7 +1122,79 @@ MOBILE RESPONSIVENESS ↓
     footer {
         padding: 80px 32px;
     }
+    .header__description {
+        width: 90%;
+    }
+    .plans {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__description {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .header__description, .header__img--wrapper {
+        width: 100%;
+        max-width: 512px;
+        margin: 0 auto;
+    }
+        .header__customers--title, .header__img--wrapper {
+        margin-top: 48px;
+    }
+    .header__customers {
+        padding-right: 0px;
+    }
+    .nav__links {
+        display: none;
+    }
+    #features .section__title, #pricing .section__title {
+        font-size: 48px;
+    }
+    #features .section__title, #pricing .section__title {
+    text-align: center;
 }
+    .feature__row {
+        padding: 32px 8px;
+        margin: 0 16px;
+    }
+    .feature { 
+        width: 50%; 
+    }
+        .features {
+        max-width: 768px;
+    }
+    .quality__description {
+        margin-right: 0px;
+        padding-right: 48px;
+    }
+        .section__title {
+        font-size: 36px;
+    }
+    .steps__description {
+    padding: 32px 0;
+    padding-left: 64px;
+}
+.start__row {
+        flex-direction: column;
+    }
+        .start__title {
+        text-align: center;
+        width: 100%;
+        max-width: 512px;
+    }
+        .start__buttons {
+        width: auto;
+        margin-top: 24px;
+    }
+    .values__list {
+        max-width: 20rem;
+        flex-direction: column;
+    }
+  }
+
+
 
 @media(max-width: 768px) {
     #quality .row,
@@ -1089,6 +1209,43 @@ MOBILE RESPONSIVENESS ↓
     #pricing .row {
         margin-top: 40px;
     }
+    .feature { 
+        width: 100%; 
+    }
+    .features {
+    justify-content: center;
+    margin: 0 auto;
+  }
+    .section__para {
+        font-size: 14px;
+    }
+        .quality__description, .quality__img--wrapper, .steps__description, .steps__img--wrapper, .values__description, .values__img, .testimonials__description, .testimonials__img {
+        width: 100%;
+        max-width: 448px;
+    }
+    .quality__description, .steps__description, .values__description, .testimonials__description {
+        padding: 0;
+        margin-top: 64px;
+        text-align: center;
+    }
+    .step {
+        flex-direction: column;
+        align-items: center;
+    }
+        .values__list {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .value:nth-of-type(1) {
+        margin-right: 0px;
+    }
+        .footer__bottom {
+        flex-direction: column;
+        align-items: center;
+    }
+        .footer__copyright, .footer__socials {
+        margin-top: 32px;
+    }
 }
 
 @media(max-width: 640px) {
@@ -1101,5 +1258,83 @@ MOBILE RESPONSIVENESS ↓
     }
     main {
         margin-bottom: 80px;
+    }
+        .header__email {
+        flex-direction: column;
+        height: auto;
+    }
+    .header__email--btn {
+        width: 100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
+    .header__email--input {
+        position: static;
+        padding: 16px 0;
+        padding-left: 32px;
+        line-height: 1.5;
+    }
+        #features .section__title, #pricing .section__title {
+        font-size: 36px;
+        text-align: center;
+    }
+        .feature__row {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+        .feature__title {
+        letter-spacing: 0.025em;
+        line-height: 1;
+    }
+    .feature__para {
+        margin-top: 4px;
+        line-height: 2;
+    }
+    .section__title {
+        font-size: 30px;
+    }
+    .testimonial__bottom {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 4px;
+    }
+    .testimonial__profile {
+        flex-direction: column;
+        align-items: center;
+    }
+    .testimonial__buttons {
+        margin-top: 32px;
+    }
+        .testimonial__img {
+        height: 64px;
+        width: 64px;
+    }
+        .start__title {
+        font-size: 24px;
+    }
+    .start__buttons {
+        flex-direction: column;
+    }
+        .start__button {
+        padding: 12px 24px;
+        font-size: 14px;
+    }
+        .btn {
+        line-height: 1.5;
+    }
+    .footer__columns {
+        justify-content: center;
+    }
+    .footer__column {
+        width: auto;
+        padding: 0 16px;
+        text-align: center;
+        align-items: center;
+    }
+    .section__title {
+        font-size: 36px;
     }
 }
